refactoring: added handle error for router and updated docs with new errors
