# internal/controller/controller.go
@@ -1,6 +1,10 @@
 package controller
 
 import (
+	"errors"
+	"net/http"
+
+	"github.com/advor2102/socialnetwork/internal/errs"
 	"github.com/advor2102/socialnetwork/internal/service"
 	"github.com/gin-gonic/gin"
 )
@@ -14,5 +18,14 @@ func NewController(service *service.Service) *Controller {
 	return &Controller{
 		service: service,
 		router:  gin.Default(),
+	}
+}
+
+func (controller *Controller) handleError(c *gin.Context, err error) {
+	switch {
+	case errors.Is(err, errs.ErrUserNotFound) || errors.Is(err, errs.ErrNotFound):
+		c.JSON(http.StatusNotFound, CommonError{Error: err.Error()})
+	default:
+		c.JSON(http.StatusInternalServerError, CommonError{Error: err.Error()})
 	}
 }
